--- a/app/src/main/res/layout/app_bar_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/app_bar_my_kwik_buttons.xml
@@ -29,7 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="5"
                 android:layout_height="wrap_content"
-                android:text="Clients"
+                android:text="@string/clients"
                 android:gravity="center_horizontal"
                 android:textColor="@color/kwik_me_white"
                 android:textSize="20sp"/>
