--- a/app/src/main/res/layout/activity_add_new_trap.xml
+++ b/app/src/main/res/layout/activity_add_new_trap.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingStart="10dp"
-                    android:text="@string/ipm_login_activity_client_name"
+                    android:text="@string/client_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                 <TextView
@@ -45,7 +45,7 @@
                     android:paddingTop="10dp"
                     android:paddingStart="10dp"
                     android:onClick="createNewClientClick"
-                    android:text="New client"
+                    android:text="@string/add_new_trap_activity_new_client"
                     android:textColor="#FF256BA7" />
             </LinearLayout>
 
@@ -74,7 +74,7 @@
                         android:background="@drawable/rectangle_2_vd"
                         android:drawablePadding="10dp"
                         android:drawableStart="@drawable/user_name"
-                        android:hint="@string/ipm_login_activity_search"
+                        android:hint="@string/search"
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:paddingStart="10dp" />
@@ -110,7 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingStart="10dp"
-                    android:text="@string/ipm_login_activity_site"
+                    android:text="@string/site"
                     android:textAppearance="@style/TextAppearance.AppCompat" />
 
                 <TextView
@@ -122,7 +122,7 @@
                     android:gravity="end"
                     android:paddingStart="10dp"
                     android:paddingTop="10dp"
-                    android:text="New site"
+                    android:text="@string/add_new_trap_activity_new_site"
                     android:textColor="@color/silver" />
             </LinearLayout>
 
@@ -151,7 +151,7 @@
                     android:background="@drawable/rectangle_2_vd"
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/rectangle_51"
-                    android:hint="@string/ipm_login_activity_search"
+                    android:hint="@string/search"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:paddingStart="10dp" />
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingStart="10dp"
-                    android:text="@string/ipm_login_activity_trap_name"
+                    android:text="@string/trap_name"
                     android:textAppearance="@style/TextAppearance.AppCompat" />
 
                 <TextView
@@ -219,7 +219,7 @@
                     android:background="@drawable/rectangle_2_vd"
                     android:drawablePadding="10dp"
                     android:drawableStart="@drawable/rectangle_5"
-                    android:hint="Trap - "
+                    android:hint="@string/add_new_trap_activity_trap_name_hint"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:paddingStart="10dp" />
@@ -246,7 +246,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingStart="10dp"
-                    android:text="@string/ipm_login_activity_trap_description"
+                    android:text="@string/trap_description"
                    />
 
                 <TextView
@@ -283,7 +283,7 @@
                         android:id="@+id/add_new_trap_activity_trap_description_EditText"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
-                        android:hint="Enter description"
+                        android:hint="@string/add_new_trap_activity_enter_description"
                         android:paddingStart="25dp"
                         android:background="@android:color/transparent"
                         android:gravity="start" />
@@ -308,7 +308,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/trap_description_layout"
-            android:text="* Fields marked in red are required"
+            android:text="@string/add_new_trap_activity_fields_marked_in_red_are_required"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
             android:textColor="#FFF62C44"
