--- a/app/src/main/res/layout/client_list_item.xml
+++ b/app/src/main/res/layout/client_list_item.xml
@@ -15,15 +15,24 @@
         android:text=""
         android:textSize="20sp"
         android:textColor="#FF256BA7"/>
-    <ImageView
-        android:id="@+id/client_status_ImageView"
+
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_weight="0.5"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
+        >
 
-        />
+        <ImageView
+            android:id="@+id/client_status_ImageView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+
+            />
+    </FrameLayout>
+
+
 
 </LinearLayout>
