--- a/app/src/main/res/layout/traps_list_item.xml
+++ b/app/src/main/res/layout/traps_list_item.xml
@@ -6,11 +6,12 @@
     android:padding="10dp">
 
     <!-- Trap name and site -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_weight="0.78"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:paddingRight="10dp"
+        >
 
         <TextView
             android:id="@+id/trap_item_site_name_TextView"
@@ -18,7 +19,9 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textColor="#B5BBC5"
-            android:gravity="center_vertical"/>
+            android:layout_alignParentTop="true"
+            android:maxLines="2"
+            android:ellipsize="end"/>
         <TextView
             android:id="@+id/trap_item_name_TextView"
             android:layout_width="match_parent"
@@ -26,34 +29,38 @@
             android:text=""
             android:textSize="18sp"
             android:textColor="#256BA7"
-            android:gravity="center_vertical"/>
-    </LinearLayout>
+            android:layout_alignParentBottom="true"
+            android:maxLines="2"
+            android:ellipsize="end"/>
+    </RelativeLayout>
 
     <!-- Button image, battery image, SN -->
     <LinearLayout
-    android:layout_width="0dp"
-    android:layout_weight="0.22"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_weight="0.22"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.8"
-            android:gravity="center_horizontal"
+
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/trap_item_low_battery_ImageView"
                 android:layout_width="10dp"
                 android:scaleType="fitCenter"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:src="@drawable/battery_low"
-                android:layout_marginEnd="5dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="0dp"/>
             <ImageView
                 android:id="@+id/trap_item_image_ImageView"
                 android:layout_gravity="center_vertical"
                 android:layout_width="60dp"
                 android:layout_height="70dp"
+                android:layout_marginTop="0dp"
                 android:src="@drawable/kwik_orange"
                 android:scaleType="fitCenter" />
 
@@ -61,11 +68,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1.3">
             <TextView
                 android:id="@+id/trap_item_sn_TextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="7dp"
+                android:textSize="11sp"
                 android:text=""/>
 
         </LinearLayout>
