--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,5 +53,7 @@
   <color name="lapislazuli">#256ba7</color>
   <color name="ashgrey">#b1b4b9</color>
   <color name="munsell">#f2f2f2</color>
+  <color name="trap_section_background">#f1f1f1</color>
+  <color name="traps_activity_background">#f2f2f2</color>
 </resources>
 
