--- a/app/src/main/res/layout/content_my_kwik_buttons.xml
+++ b/app/src/main/res/layout/content_my_kwik_buttons.xml
@@ -53,17 +53,46 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/clients_activity_alert_traps_TextView"
+        <LinearLayout
+            android:id="@+id/clients_activity_overview_header_LinearLayout2"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_below="@+id/clients_activity_overview_header_LinearLayout"
+            android:orientation="horizontal"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:background="@drawable/clients_listview_background"
-            android:gravity="center"
-            android:text="@string/_0_trap_alerts"
-            android:textSize="22sp"
-            android:textColor="#8C9496"
-            />
+            android:layout_below="@+id/clients_activity_overview_header_LinearLayout">
+            <TextView
+                android:id="@+id/clients_activity_alert_traps_TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/clients_activity_overview_header_LinearLayout"
+                android:layout_weight="1"
+                android:text="@string/_0_trap_alerts"
+                android:textSize="17sp"
+                android:textColor="@color/manatee_2"
+                android:gravity="center_vertical|center_horizontal"
+                />
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/munsell"
+
+                />
+            <TextView
+                android:id="@+id/clients_activity_notification_traps_TextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_below="@+id/clients_activity_overview_header_LinearLayout"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="@string/_0_notifications"
+                android:textSize="17sp"
+                android:textColor="@color/manatee_2"
+                />
+        </LinearLayout>
     </RelativeLayout>
 
     <RelativeLayout
