--- a/app/src/main/res/layout/traps_list_item.xml
+++ b/app/src/main/res/layout/traps_list_item.xml
@@ -22,16 +22,29 @@
             android:layout_alignParentTop="true"
             android:maxLines="2"
             android:ellipsize="end"/>
+
+        <TextView
+            android:id="@+id/trap_item_description_TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="16sp"
+            android:textColor="#256BA7"
+            android:layout_alignParentBottom="true"
+            android:maxLines="2"
+            android:ellipsize="end"/>
+
         <TextView
             android:id="@+id/trap_item_name_TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="18sp"
+            android:textSize="22sp"
             android:textColor="#256BA7"
-            android:layout_alignParentBottom="true"
             android:maxLines="2"
-            android:ellipsize="end"/>
+            android:ellipsize="end"
+            android:layout_above="@+id/trap_item_description_TextView"
+            android:layout_marginBottom="5dp" />
     </RelativeLayout>
 
     <!-- Button image, battery image, SN -->
